--- a/src/pug/ui/buttons.pug
+++ b/src/pug/ui/buttons.pug
@@ -34,42 +34,11 @@ html(lang="ru")
 					pre.
 						input.btn(type="submit" value="Заказать")
 					hr
-					button.btn-accent Заказать
+					button.btn-primary Заказать
 					pre.
-						button.btn-accent Заказать
+						button.btn-primary  Заказать
 					hr
-					button.btn-light Дополнительно
+					button.btn-outline Дополнительно
 					pre.
-						button.btn-light Дополнительно
-					br
-					a(href="#!").btn-back
-					pre.
-						a(href="#!").btn-back
-					br
-					a(href="#!").btn-back.btn-round
-					pre.
-						a(href="#!").btn-back.btn-round
-					br
-					a(href="#!").btn-close
-					br
-					.switch-group
-						label.switch-label
-							input(type="radio" name="switch_name")
-							span.switch-btn Традиционное
-						label.switch-label
-							input(type="radio" name="switch_name")
-							span.switch-btn Тонкое
-						label.switch-label
-							input(type="radio" name="switch_name")
-							span.switch-btn Сырный бортик
-					br
-					.switch-group
-						label.switch-label
-							input(type="radio" name="switch_name2")
-							span.switch-btn 28см
-						label.switch-label
-							input(type="radio" name="switch_name2")
-							span.switch-btn 32см
-						label.switch-label
-							input(type="radio" name="switch_name2")
-							span.switch-btn 42см
+						button.btn-outline Дополнительно
+					
