--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -22,75 +22,21 @@ html(lang="ru")
 				h2 Типографика
 
 				.container-dashboard__content
-					.h1 Heading 46
+					.h-50 Heading 46
 					pre.
 						.h1 Heading 46
 					hr
-					.h1-up Heading 46 UP
+					.header-block 
+						.h2 Популярные услуги
+						a(href="#!").btn-primary 
+							span Все врачи
+							svg.svg-rarr
+								use(href='../img/sprite.svg#svg-rarr')
 					pre.
-						.h1-up Heading 46 UP
-					hr
-					.h2 Heading 34
-					pre.
-						.h2 Heading 34
-					hr
-					.h2-up Heading 34 UP
-					pre.
-						.h2-up Heading 34 UP
-					hr
-					.h3 Heading 30
-					pre.
-						.h3 Heading 30
-					hr
-					.h4 Heading 24
-					pre.
-						.h4 Heading 24
-					hr
-					.h5 Heading 24
-					pre.
-						.h5 Heading 24
-					hr
-					.h6 Heading 24
-					pre.
-						.h6 Heading 24
-					hr
-					.h7 Heading 24
-					pre.
-						.h7 Heading 24
-					hr
-					.h8 Heading 20
-					pre.
-						.h8 Heading 20
-					hr
-					.h9 Heading 20
-					pre.
-						.h9 Heading 20
-					hr
-					.h10 Heading 20
-					pre.
-						.h10 Heading 10
-					hr
-					.h11 Heading 20
-					pre.
-						.h11 Heading 20
-					hr
-					.txt-14 Text 14px
-					pre.
-						.txt-14 Text 14px
-					hr
-					.txt-12 Text 12px
-					pre.
-						.txt-12 Text 12px
-					hr
-					.txt-14.txt-bold Text Bold
-					pre.
-						.txt-14.txt-bold Text Bold
-					hr
-					.txt-14.txt-up Text Uppercase
-					pre.
-						.txt-14.txt-up Text Uppercase
-					hr
-					a(href="#!").txt-grey Text Uppercase
-					pre.
-						a(href="#!").txt-grey Text Uppercase
+						.header-block 
+							.h2 Популярные услуги
+							a(href="#!").btn-primary 
+								span Все врачи
+								svg.svg-rarr
+									use(href='../img/sprite.svg#svg-rarr')
 					
