--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -21,7 +21,20 @@ html(lang="ru")
 			.container-dashboard
 				h2 Цветовая схема
 
-				.container-dashboard__content
-					span.notify-item 7
-					pre.
-						span.notify-item 7
+				.container-dashboard__content(style="background: #B9B1A6")
+					.social-block
+						a(href="#!").social-link
+							img(src="../img/social/inst.svg", width="24" height="24" alt="img")
+						a(href="#!").social-link
+							span IN
+						a(href="#!").social-link
+							span BE
+				br
+				.address-block
+					.address-block__metro
+						svg.svg-metro
+							use(href='../img/sprite.svg#svg-metro')
+						p Новочеркасская
+					.address-block__info
+						p ул. Стахановцев, д. 6
+						p пн-вс: 9:00 — 21:00
