--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -48,36 +48,50 @@
 	font-weight: 700;
 	font-display: swap;
 }
+@font-face{
+	font-family: 'RobotoMono';
+	src: url('../fonts/RobotoMono.woff2'), format('woff2');
+	font-weight: 400;
+	font-display: swap;
+}
+
 *, *:after, *:before {
 	box-sizing: border-box;
 	background-repeat: no-repeat;
 	background-size: cover;
 	
 }
-
-
+:root{
+	--second-family: 'PhonkSans', sans-serif;
+	--font6:"Roboto Mono", sans-serif;
+}
+// @function remy($px) {
+//     @return calc(($px/19.2))+vw;
+// }
+@function remy($pxsize) {
+  
+	@return calc(($pxsize/19.2))*1vw;
+  }
 html {
 	scroll-behavior: smooth;
-	
-	scroll-padding-top: 130px;
 }
 
 html,
 body {
 	margin: 0;
 	padding: 0;
-	font-family: $ff;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 	font-size: 16px;
-    line-height: 1.50;
+    color: #2E3033;
 	-webkit-font-smoothing: subpixel-antialiased;
 	-moz-osx-font-smoothing: auto;
 	display: flex;
 	flex-direction: column;
+	background-color: #fff;
 	min-height: 100vh;
 	&>*{width: 100%;}
-	@media (max-width: 399px) {
-		font-size: 13px;
-	}
+	
 }
 .lock{overflow: hidden; }
 
@@ -144,112 +158,18 @@ input::placeholder, textarea::placeholder, textarea::placeholder{
 
 
 .container{
-	width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-	max-width:600px;
-	margin-left: auto;
-	margin-right: auto;
-	// overflow: hidden;
-	// @media (max-width: 399px) {
-	// 	padding-left: 10px;
-	// 	padding-right: 10px;
-	// }
-}
-
-.header, .footer{flex-shrink: 0;}
-main{flex:1; padding-bottom: 200px; background-color: #fff;}
-
-.flex, .flex-center, .header-content, .header-right,.footer-content,.footer, .cat-wrapper, .flex-link, .column-center,.filter-label,.flex-between{
-	display: flex;
-	align-items: center;
-	column-gap:12px;
-}
-.column-center{
-	flex-direction: column;
-	row-gap:12px;
-	justify-content: center;
-}
-.flex-center{
-	justify-content: center;
-	width: 100%;
-}
-.flex-between{justify-content: space-between;}
-*.two-columns, .two-columns, .products-content.two-columns{
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	row-gap:12px;
-	column-gap: 12px;
-	&>*{
-		grid-column: span 3;
+	width: 1640px;
+	margin: 0 auto;
+	@media (max-width: 1919px) {
+		width: remy(1640);
+		
 	}
 }
-.flx-1{flex:1}
-.wrapper-gap-20{
+.flex{
 	display: flex;
-	flex-direction: column;
-	row-gap:20px;
-	&>*{width: 100%;}
-}
-.gap-20{
-	&>*+*{margin-top: 20px!important;}
-}
-.gap-12{
-	&>*+*{margin-top: 12px!important;}
-}
-.w-100{width:100%!important;}
-.p-10{
-	padding: 10px;
-}
-.pb-100{padding-bottom: 100px!important;}
-.pb-140{padding-bottom: 140px!important;}
-.pb-200{padding-bottom: 260px!important;}
-.mt-20{margin-top: 20px!important;}
-.mb-20{margin-bottom: 20px!important;}
-.mt-auto{margin-top: auto;}
-.mt-6{margin-top: 6px!important;}
-.scroll-y{
-	overflow:hidden;
-	overflow-y: auto;
-	scrollbar-width: 0;
-	&::-webkit-scrollbar{display: none;}
-}
-.top-border, .popUp-footer{
-	border-top: 1px solid $s1;
-
-}
-.popup-wrapper{
-	backdrop-filter: blur(16px);
-	background: rgba(31, 31, 31, 0.7);
-	display: flex;
-	justify-content: center;
 	align-items: center;
-	position: fixed;
-	inset:0;
-	z-index: 15;
-	flex-direction: column;
-	&>*{width: 95%; max-width: 382px;}
-	
-	.popup-small{
-		padding: 60px 24px;
-		border-radius: 20px;
-		background-color: #fff;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
-		row-gap:20px;
-		.flex-center{
-			width: 100%;
-			.btn-light, .btn-accent{flex:1}
-		}
+	column-gap:20px;
+	@media (max-width: 1919px) {
+		column-gap:remy(20);
 	}
-}
-.progress-ring {
-	transform: rotate(-90deg);
-}
-
-.progress-ring-circle {
-	transition: stroke-dashoffset 1s linear;
 }
