--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -5,42 +5,55 @@ header.header
 			a(href="index.html").logo
 				svg.svg-logo
 					use(href='./img/sprite.svg#svg-logo')
-			.header-nav-wrapper.flex
-				ul.header-menu.flex
-					li
-						a(href="#!") Услуги и цены
-					li
-						a(href="#!") до / после
-					li
-						a(href="#!") наши врачи
-					li
-						a(href="#!") Отзывы 
-					li
-						a(href="#!") о нас
-					li
-						a(href="#!") Контакты
-					li
-						a(href="#!") Услуги и цены
+			.header-nav-wrapper.flex#header-menu
+				//LOGO для моб версии
+				.header-nav-logo.flex
+					a(href="index.html").logo
+						svg.svg-logoDark
+							use(href='./img/sprite.svg#svg-logoDark')
 				
-				
-				.address-block
-					.address-block__metro
-						svg.svg-metro
-							use(href='./img/sprite.svg#svg-metro')
-						p Новочеркасская
-					.address-block__info
-						p ул. Стахановцев, д. 6
-						p пн-вс: 9:00 — 21:00
+				.header-nav-scroll.flex
+					//MENU
+					ul.header-menu.flex
+						li
+							a(href="#!") Услуги и цены
+						li
+							a(href="#!") до / после
+						li
+							a(href="#!") наши врачи
+						li
+							a(href="#!") Отзывы 
+						li
+							a(href="#!") о нас
+						li
+							a(href="#!") Контакты
+						li
+							a(href="#!") Услуги и цены
 					
-				
-				a(href="#!").btn Позвонить
-				
-				.social-block
-					a(href="#!").social-link
-							img(src="../img/social/inst.svg", width="24" height="24" alt="img")
-					a(href="#!").social-link
-						span IN
-					a(href="#!").social-link
-						span BE
+					
+					.address-block
+						.address-block__metro
+							svg.svg-metro
+								use(href='./img/sprite.svg#svg-metro')
+							p Новочеркасская
+						.address-block__info
+							p ул. Стахановцев, д. 6
+							p пн-вс: 9:00 — 21:00
+						
+					.header-contacts.flex
+						a(href="#!").btn Позвонить
+						
+						.social-block
+							a(href="#!").social-link
+									img(src="./img/social/inst.svg", width="24" height="24" alt="img")
+							a(href="#!").social-link
+								span IN
+							a(href="#!").social-link
+								span BE
+			
+			
+			//MOBILE MENU BURGER
+			button(type="button").menu-toggle
+				span
 
 			
