--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -164,6 +164,11 @@ input::placeholder, textarea::placeholder, textarea::placeholder{
 		width: remy(1640);
 		
 	}
+	@media (max-width: 767px) {
+		width: 100%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 .flex{
 	display: flex;
@@ -171,5 +176,8 @@ input::placeholder, textarea::placeholder, textarea::placeholder{
 	column-gap:20px;
 	@media (max-width: 1919px) {
 		column-gap:remy(20);
+	}
+	@media (max-width: 767px) {
+		column-gap:20px;
 	}
 }
