--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -35,7 +35,7 @@
 .btn{
 	color:#c7491f;
 	background-color: #fff;
-	border:1px solid currentColor;
+	border:1px solid #fff;
 	&:hover{color:#c7491f;}
 }
 .btn-outline{
