--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -3,6 +3,7 @@
 	padding-top: 40px;
 	padding-bottom: 40px;
 	background-color: #B9B1A6;
+	border-bottom:1px solid white;
 	&-content{
 		display: flex;
 		justify-content: space-between;
