--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,6 +8,7 @@
 	font-size: 50px;
 	line-height: 1.2;
 	letter-spacing: -0.06em;
+	font-weight: 700;
 	text-transform: uppercase;
 	@media (max-width: 1919px) {
 		font-size: remy(50);
@@ -28,6 +29,12 @@
 	@media (max-width: 767px) {
 	font-size: 20px;
 	}
+}
+.txt-24{
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 108%;
+	letter-spacing: -0.08em;
 }
 .txt-white{
 	color: white!important;
