--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -1,8 +1,8 @@
 .promo
 	.promo-top
 		.container.pl-40
-			.left-decore
-				p наши услуги
+			//- .left-decore
+			//- 	p наши услуги
 			.promo-title__content
 				.promo-title__head
 				
@@ -19,7 +19,7 @@
 			
 			
 			.promo-img
-				img(src="./img/img.webp", width="823" height="663" alt="img")
+				img.cover-img(src="./img/img.webp", width="823" height="663" alt="img")
 				
 				span.decore-text-top улыбки
 				span.decore-text-bottom жизни
