--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -1,8 +1,12 @@
 .promo
 	.promo-top
 		.container.pl-40
-			//- .left-decore
-			//- 	p наши услуги
+			.left-decore-line
+				span.decore-line__top
+				p наши услуги
+				span.decore-line__bottom
+					svg.svg-arDown
+						use(href='./img/sprite.svg#svg-arDown')
 			.promo-title__content
 				.promo-title__head
 				
