--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -197,15 +197,30 @@ input::placeholder, textarea::placeholder, textarea::placeholder{
 	display: flex;
 	flex-direction: column;
 }
-.left-decore{
+.left-decore-line{
 	position: absolute;
 	top: 0;
 	left: 0;
-	writing-mode: vertical-rl;
-	transform: scale(-1);
+	
+	
 	font-weight: 500;
 	font-size: 18px;
 	text-transform: uppercase;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	
+	row-gap:20px;
+	p{
+		flex-shrink:0;
+		height: max-content;
+		flex-shrink: 0;transform: scale(-1);writing-mode: vertical-rl;
+	}
+	@media (max-width: 1919px) {
+		font-size:remy(18);
+	}
+	@media (max-width: 767px) {
+		display: none!important;
+	}
 
 }
