--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -10,7 +10,7 @@
 			.promo-title__content
 				.promo-title__head
 				
-					h1.h1 Всё на 4-х (All-on-4)
+					h1.h1 Всё на 4-х<br>(All-on-4)
 					p.promo-subtitle Вся хирургическая часть с установкой имплантатов и мультиюнитов
 				//картинка на mob экранах
 				.promo-img.promo-img--mob
