--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 
 @use "sections/_header.scss";
 @use "sections/_promo-main.scss";
+@use "sections/_service-poppulare.scss";
 
 
 // @use "sections/_footer";
