--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -2,5 +2,9 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header
-	include ../sections/_promo.pug
+	main.main
+		include ../sections/_promo.pug
+		include ../sections/_service-poppulare.pug
 	
+	
+	//include ../sections/_footer
