--- a/src/pug/sections/_service-poppulare.pug
+++ b/src/pug/sections/_service-poppulare.pug
@@ -1,8 +1,8 @@
 //POPPULARE SERVICE
 section.poppular-service
-	.container.pl-40.border-bot
+	.container-special
 		.header-block
-			.h2 Популярные услуги
+			h2.h2 Популярные услуги
 			a(href="#!").btn-primary 
 				span Все врачи
 				svg.svg-rarr
@@ -34,7 +34,7 @@ section.poppular-service
 
 section.poppular-service.visible-sm
 	.container
-		.h2 Популярные услуги
+		h2.h2 Популярные услуги
 		.poppular-slider.swiper
 			.swiper-wrapper
 				.swiper-slide
