--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -15,7 +15,7 @@
 	font-family: var(--font-family);
 	font-weight: 600;
 	font-size: 20px;
-	
+	.svg-rarr{color: white;}
 	@media (max-width: 1919px) {
 		height: remy(52);
 		padding-inline:remy(35);
