--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -5,6 +5,7 @@ block content
 	main.main
 		include ../sections/_promo.pug
 		include ../sections/_service-poppulare.pug
+		include ../sections/_our-team.pug
 	
 	
 	//include ../sections/_footer
