--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -176,7 +176,7 @@ section{
 	}
 }
 
-.container{
+.container, .container-special{
 	width: 1645px;
 	margin: 0 auto;
 	@media (max-width: 1919px) {
@@ -189,19 +189,26 @@ section{
 		padding-right: 20px;
 	}
 }
-.container.border-bot{
+.container-special{
 	border-bottom: 1px solid $pr;
-}
-.container.pl-40{
 	position: relative;
-	padding-left: 40px;
+	padding-left: 110px;
+	@media (min-width: 768px) and (max-width: 1919px) {padding-left: remy(110);}
+	@media (max-width: 767px) {
+		padding-left: 20px;
+	}
+}
+.container.pl-110{
+	position: relative;
+	padding-left: 110px;
+	@media (min-width: 768px) and (max-width: 1919px) {padding-left: remy(110);}
 	@media (max-width: 767px) {
 		padding-left: 20px;
 	}
 	
 }
 
-.flex{
+.flex,.flex-link{
 	display: flex;
 	align-items: center;
 	column-gap:20px;
