--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -34,4 +34,12 @@ section.team
 			.team-preview__video
 				.team-preview__video-poster
 					img(src="./img/team/big-img.webp", srcset="./img/team/big-img@2x.webp 2x"  width="582" height="705" alt="img")
-				.team-preview__video-btn
+				
+				a(href="#!").team-preview__video-btn.visible-desk
+					p посмотреть видео с врачом
+					span.btn-play
+			
+			a(href="#!").team-preview__video-btn.visible-mob
+				p видео с врачом
+				span.btn-play
+						
