--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -46,7 +46,7 @@
 	padding-block: 20px;
 	border-bottom: 0.67px solid #b9b1a6;
 	@media(min-width: 768px)and (max-width: 1919px) {
-		column-gap: remy(20);
+		padding-block: remy(20);
 	}
 	@media (max-width: 767px) {
 		padding-block: 20px;
