--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -35,11 +35,63 @@ section.team
 				.team-preview__video-poster
 					img(src="./img/team/big-img.webp", srcset="./img/team/big-img@2x.webp 2x"  width="582" height="705" alt="img")
 				
-				a(href="#!").team-preview__video-btn.visible-desk
+				a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
 					p посмотреть видео с врачом
 					span.btn-play
 			
-			a(href="#!").team-preview__video-btn.visible-mob
+			a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT"  data-fancybox="video-about").team-preview__video-btn.visible-mob
 				p видео с врачом
 				span.btn-play
 						
+		//карточки темы
+		.teams-cards.swiper
+			.swiper-wrapper
+				.swiper-slide.persone-card
+					//card
+					.persone-card__img
+						img.cover-img(src="./img/team/1.webp", srcset="./img/team/1@2x.webp"  width="281" height='187' alt="img")
+					.persone-card-block
+						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+						.persone-card__info
+							p Основатель клиники
+							p Стоматолог - хирург, имплантолог, пародонтолог
+				.swiper-slide.persone-card
+					//card
+					.persone-card__img
+						img.cover-img(src="./img/team/2.webp", srcset="./img/team/2@2x.webp"  width="281" height='187' alt="img")
+					.persone-card-block
+						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+						.persone-card__info
+							p Основатель клиники
+							p Стоматолог - хирург, имплантолог, пародонтолог 
+				
+				.swiper-slide.persone-card
+					//card
+					.persone-card__img
+						img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
+					.persone-card-block
+						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+						.persone-card__info
+							p Основатель клиники
+							p Стоматолог - хирург, имплантолог, пародонтолог 
+							
+				.swiper-slide.persone-card
+					//card
+					.persone-card__img
+						img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
+					.persone-card-block
+						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+						.persone-card__info
+							p Основатель клиники
+							p Стоматолог - хирург, имплантолог, пародонтолог 
+				
+				.swiper-slide.persone-card
+					//card
+					.persone-card__img
+						img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
+					.persone-card-block
+						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+						.persone-card__info
+							p Основатель клиники
+							p Стоматолог - хирург, имплантолог, пародонтолог 
+					
